# ai-note

./: .gitignore  AGENTS.md  CLAUDE.md
.claude/agents/: coder.md  planner.md  reviewer.md
.claude/commands/: build-feature.md  review-diff.md
.claude/skills/repo-conventions/: SKILL.md
agent-pack/: README.md
agent-pack/adapters/claude-code/: adapter.json
agent-pack/adapters/codex/: adapter.json
agent-pack/core/: pack.json
agent-pack/core/agents/: coder.json  planner.json  reviewer.json
agent-pack/core/commands/: build-feature.json  review-diff.json
agent-pack/core/policies/: escalation.md  output-contracts.md
agent-pack/mcp/: registry.json
app/: .env.local.example  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
app/src/: App.tsx  main.tsx  proxy.ts
app/src/app/: layout.tsx
desktop/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx  providers.tsx  router.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.md  api-spec.md  backend-architecture.md  backend-plan.md  backend-progress.md  desktop-plan.md  desktop-progress.md  desktop-session-strategy.md  frontend-integration.md  schema.sql
scripts/: build-agent-pack.mjs  build-agent-pack.ps1
server/: package-lock.json  package.json
server/src/: auth.mjs  db.mjs  domain.mjs  http.mjs  seed.mjs  server.mjs  transcription.mjs
supabase/migrations/: 001_initial_schema.sql
(+121 files in other folders)
